# miflora-plantdb-webui

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/miflora_plantdb_webui/: __main__.py  db.py  main.py
src/miflora_plantdb_webui/templates/: base.html  index.html  plant.html
