[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "miflora-plantdb-webui"
dynamic = ["dependencies", "version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Jan Holthuis", email = "jan.holthuis@ruhr-uni-bochum.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.scripts]
miflora-plantdb-webui = "miflora_plantdb_webui:main"

[project.urls]
Documentation = "https://github.com/Jan Holthuis/miflora-plantdb-webui#readme"
Issues = "https://github.com/Jan Holthuis/miflora-plantdb-webui/issues"
Source = "https://github.com/Jan Holthuis/miflora-plantdb-webui"

[tool.hatch.version]
path = "src/miflora_plantdb_webui/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/miflora_plantdb_webui tests}"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.coverage.run]
source_pkgs = ["miflora_plantdb_webui", "tests"]
branch = true
parallel = true
omit = [
  "src/miflora_plantdb_webui/__about__.py",
]

[tool.coverage.paths]
miflora_plantdb_webui = ["src/miflora_plantdb_webui", "*/miflora-plantdb-webui/src/miflora_plantdb_webui"]
tests = ["tests", "*/miflora-plantdb-webui/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
